# casino-ortep

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  casino.py  db.py  docker-compose.yml  filters.py  handlers.py  helpers.py  jobs.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 18ce4489452e_add_casino_locations_and_player_stats.py  2a2bb8d3aa6b_baseline.py  c3f7a9e12d45_add_pending_reveals.py
tests/: test_bot_reveal.py  test_casino.py  test_db.py  test_db_reveals.py
